# Hotel

./: CMakeLists.txt  main.cpp
Smart_Buffer/: CMakeLists.txt
Smart_Buffer/inc/: SmartBuffer.hpp
Smart_Buffer/src/: SmartBuffer.cpp
Smart_Buffer/test/: CMakeLists.txt  SmartBufferTest.cpp
docs/: HowToGoogleTest.txt
hotel/tcp_test/: tcp_test.py
